--- a/index.html
+++ b/index.html
@@ -63,28 +63,29 @@
 					<section class="box special features">
 						<div class="features-row">
 							<section>
-								<span class="icon major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
+								<img src="images/twitter.png" class="img-circle center company" alt="Twitter icon" />
+								<h3>Twitter</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 							<section>
-								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Ipsum dolor</h3>
+								<img src="images/cornell.png" class="img-circle center company" alt="Twitter icon" />
+								<h3>Cornell Engineering</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
-								<span class="icon major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
+								<img src="images/ge.png" class="img-circle center company" alt="Twitter icon" />
+								<h3>GE Aviation</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 							<section>
-								<span class="icon major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<img src="images/codekids.png" class="center company" alt="Twitter icon" />
+								<h3>CodeKids Camp</h3>
+								<p>At CodeKids, I worked as Junior Instructor to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver actual quantifiable projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
 							</section>
 						</div>
+						<span class="image featured"><img src="images/muir.jpg" alt="" /></span>
 					</section>
 
 					<div class="row">
