--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
+					<h1>Johanna Smith-Palliser</h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -82,7 +83,7 @@
 							<section>
 								<img src="images/codekids.png" class="center company" alt="Twitter icon" />
 								<h3>CodeKids Camp</h3>
-								<p>At CodeKids, I worked as Junior Instructor to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver actual quantifiable projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
+								<p>At CodeKids, I worked an <strong>Instructor</strong> to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver actual quantifiable projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
 							</section>
 						</div>
 						<span class="image featured"><img src="images/muir.jpg" alt="" /></span>
