--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 							<h2>hi there!</h2>
 							<p>I'm Johanna. I'm currently a senior at Cornell University majoring in Computer Science. My interests include Software Engineering, Mobile Development, and EdTech.</p>
 						</header>
+						<ul class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/johannasp/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="/resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
+						</ul>
 						<span class="image featured"><img src="images/snee.jpg" alt="" /></span>
 					</section>
 
@@ -66,22 +73,22 @@
 							<section>
 								<img src="images/twitter.png" class="img-circle center company" alt="Twitter icon" />
 								<h3>Twitter</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<p>As a <strong>Software Engineering Intern</strong> at Twitter, I worked on the MoPub SDK team recreating the fullscreen video ad experience on iOS devices to empower developers and create a seamless user experience.  </p>
 							</section>
 							<section>
-								<img src="images/cornell.png" class="img-circle center company" alt="Twitter icon" />
+								<img src="images/cornell.png" class="img-circle center company" alt="Cornell icon" />
 								<h3>Cornell Engineering</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<p>In the Department of Computer Science, my role as a <strong>Teaching Assistant</strong> for the introductory and intermediate web development courses (CS 1300, CS 2300) allows me to play help convey technical knowledge to fellow students in a concise and welcoming manner to enable them to continue in the field with confidence and a sense of belonging. Technical concepts for this course include: frontend and backend development, database construction, user interactivity, design principles.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
-								<img src="images/ge.png" class="img-circle center company" alt="Twitter icon" />
+								<img src="images/ge.png" class="img-circle center company" alt="GE icon" />
 								<h3>GE Aviation</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<p>As a <strong>Digital Technology Leadership Program Intern</strong>, I leveraged my technical knowledge in software development and database management to lead a project for a tool to be used on shop floors. By communicating technical features of projects to non-technical stakeholders, I was able to gain insight into defining the problem statement that would later inform my decisions in building a product roadmap with best implementation methods.</p>
 							</section>
 							<section>
-								<img src="images/codekids.png" class="center company" alt="Twitter icon" />
+								<img src="images/codekids.png" class="center company" alt="CodeKids icon" />
 								<h3>CodeKids Camp</h3>
 								<p>At CodeKids, I worked an <strong>Instructor</strong> to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver actual quantifiable projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
 							</section>
@@ -90,29 +97,35 @@
 					</section>
 
 					<div class="row">
-						<div class="col-6 col-12-narrower">
-
+						<div class="col-4 col-12-narrower">
 							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions special">
+								<span class="image featured"><img src="images/chef.jpg" alt="Chef's Choice logo" /></span>
+								<h3>Chef's Choice</h3>
+								<p>Recipe recommendation system based on mood.</p>
+								<!-- <ul class="actions special">
 									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
+								</ul> -->
 							</section>
-
 						</div>
-						<div class="col-6 col-12-narrower">
-
+						<div class="col-4 col-12-narrower">
 							<section class="box special">
-								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions special">
+								<span class="image featured"><img src="images/hyperloop.png" alt="Cornell Hyperloop logo" /></span>
+								<h3>Cornell Hyperloop</h3>
+								<p>Revolutionizing the future of transportation.</p>
+								<!-- <ul class="actions special">
 									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
+								</ul> -->
 							</section>
-
+						</div>
+						<div class="col-4 col-12-narrower">
+							<section class="box special">
+								<span class="image featured"><img src="images/ovegas.png" alt="OVegas gameplay" /></span>
+								<h3>OVegas</h3>
+								<p>Texas Holdem Poker, OCaml version.</p>
+								<!-- <ul class="actions special">
+									<li><a href="#" class="button alt">Learn More</a></li>
+								</ul> -->
+							</section>
 						</div>
 					</div>
 
@@ -139,14 +152,6 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
