--- a/index.html
+++ b/index.html
@@ -1,182 +1,172 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Alpha by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Hey there!</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/ionicons.css">
+		<title>hi there!</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/style.css" />
+	</head>
+	<body class="landing is-preload">
+		<div id="page-wrapper">
 
-		<meta charset="UTF-8">
-		<meta property="og:url" content="https://johannasp.com/">
-		<meta property="og:title" content="Johanna Smith-Palliser">
-		<meta property="og:type" content="website">
-		<meta property="og:description" content="Developer, mentor, and teacher. Computer science student at Cornell University.">
-		<meta property="og:image" content="http://johannasp.com/assets/johanna.jpg">
-
-		<script>
-  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  		ga('create', 'UA-105586258-1', 'auto');
-  		ga('send', 'pageview');
-		</script>
- 	</head>
-
-	<body>
-		<section class="module parallax parallax-1">
-		  <div class="container">
-		    <h1>JOHANNA SMITH-PALLISER</h1>
-		  </div>
-		</section>
-
-		<section class="module content">
-			<div class="container about">
-				<section class="about vertical-center">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-3 col-md-offset-2 pic-col">
-								<img src="assets/johanna.jpg" class="img-circle img-center" alt="Picture of Johanna Smith-Palliser">
-							</div>
-							<div class="col-md-4 col-md-offset-1">
-								<h2>Hello!</h2>
-								<p class="intro">I'm Johanna, and I want to revolutionize the way we interact with technology on a daily basis. I'm currently a junior at Cornell University majoring in Computer Science. My interests include Software Engineering, Mobile Development, and Brilliant User Experience.</p>
-								<ul class="list-inline text-center">
-									<li><a href="mailto:jls628@cornell.edu?Subject=Hi%20there!"><i class="icon ion-ios-email social-icons"></i></a></li>
-      						<li><a href="https://www.linkedin.com/in/johannasp/" target="_blank"><i class="icon ion-social-linkedin social-icons"></i></a></li>
-      						<li><a href="./resume" target="_blank"><i class="icon ion-document-text social-icons"></i></a></li>
-      						<li><a href="https://github.com/johannasp" target="_blank"><i class="icon ion-social-github social-icons"></i></a></li>
+			<!-- Header -->
+				<header id="header" class="alt">
+					<h1>Johanna Smith-Palliser</h1>
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li>
+								<a href="#" class="icon fa-angle-down">Layouts</a>
+								<ul>
+									<li><a href="generic.html">Generic</a></li>
+									<li><a href="contact.html">Contact</a></li>
+									<li><a href="elements.html">Elements</a></li>
+									<li>
+										<a href="#">Submenu</a>
+										<ul>
+											<li><a href="#">Option One</a></li>
+											<li><a href="#">Option Two</a></li>
+											<li><a href="#">Option Three</a></li>
+											<li><a href="#">Option Four</a></li>
+										</ul>
+									</li>
 								</ul>
-							</div>
-						</div>
-					</div>
+							</li>
+							<li><a href="#" class="button">Sign Up</a></li>
+						</ul>
+					</nav>
+				</header>
+
+			<!-- Banner -->
+				<section id="banner">
+					<img src="images/johanna.jpg" class="img-circle center" alt="Picture of Johanna Smith-Palliser" />
+					<h2>Johanna Smith-Palliser</h2>
+					<p>Developer | Mentor | CS @ Cornell</p>
 				</section>
-		  </div>
-		</section>
 
-		<section class="module parallax parallax-2">
-		  <div class="container">
-		    <h1>PROJECTS</h1>
-		  </div>
-		</section>
+			<!-- Main -->
+				<section id="main" class="container">
 
-		<section class="module content">
-		  <div class="container">
-		    <div class="row">
-					<div class="col-sm-4">
-						<img src="assets/basket.png" class="img-circle img-center" alt="Icon for Basket project">
-						<div class="project-description">
-							<h3>SmartBasket</h3>
-							Created at Walmart's Brick & Code 2.0 Hackathon, this iOS application allows shoppers to participate in "shop sharing," an opportunity to combine multiple users' orders and save money.
+					<section class="box special">
+						<header class="major">
+							<h2>hi there!</h2>
+							<p>I'm Johanna. I'm currently a senior at Cornell University majoring in Computer Science. My interests include Software Engineering, Mobile Development, and EdTech.</p>
+						</header>
+						<ul class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/johannasp/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="/resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
+						</ul>
+						<span class="image featured"><img src="images/snee.jpg" alt="" /></span>
+					</section>
+
+					<section class="box special features">
+						<div class="features-row">
+							<section>
+								<img src="images/twitter.png" class="img-circle center company" alt="Twitter icon" />
+								<h3>Twitter</h3>
+								<p>As a <strong>Software Engineering Intern</strong> at Twitter, I worked on the MoPub SDK team recreating the fullscreen video ad experience on iOS devices to empower developers and create a seamless user experience.  </p>
+							</section>
+							<section>
+								<img src="images/cornell.png" class="img-circle center company" alt="Cornell icon" />
+								<h3>Cornell Engineering</h3>
+								<p>In the Department of Computer Science, my role as a <strong>Teaching Assistant</strong> for the introductory and intermediate web development courses (CS 1300, CS 2300) allows me to play help convey technical knowledge to fellow students in a concise and welcoming manner to enable them to continue in the field with confidence and a sense of belonging. Technical concepts for this course include: frontend and backend development, database construction, user interactivity, design principles.</p>
+							</section>
 						</div>
-					</div>
-					<div class="col-sm-4">
-						<img src="assets/adoptme.png" class="img-circle img-center" alt="Icon for Adopt.Me project">
-						<div class="project-description">
-							<h3>Adopt.Me</h3>
-							It's Tinder, but for dogs! This iOS application utilizes the popular Tinder interface to connect those looking to adopt a pet with dogs & cats at their local shelters. Swiping right on an animal allows you to show interest, providing you with additional pet info and an opportunity to contact the shelter.
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<img src="assets/socks.png" class="img-circle img-center" alt="Icon for Knock Knock project">
-						<div class="project-description">
-							<h3>Knock Knock</h3>
-							Dorm life can be awkward, especially when it comes to privacy. Knock Knock lets you ask your roommate(s) for some private time with a quick tap on your phone, avoiding awkward conversations and giving you the space you need. Privacy options include sleep, study, and me time.
-						</div>
-					</div>
-				</div>
-		  </div>
-		</section>
-
-		<section class="module parallax parallax-3">
-		  <div class="container">
-		    <h1>PROFESSIONAL EXPERIENCE</h1>
-		  </div>
-		</section>
-
-		<section class=" content">
-			<div class="container job-description">
-						<!-- GE -->
-						<div class="row">
-							<div class="col-md-3 col-md-offset-1 pic-col">
-								<img src="assets/ge.png" class="company-img-circle img-center" alt="GE logo">
-							</div>
-							<div class="col-md-6">
+						<div class="features-row">
+							<section>
+								<img src="images/ge.png" class="img-circle center company" alt="GE icon" />
 								<h3>GE Aviation</h3>
-								<h4>Digital Technology Leadership Program Intern | Cincinnati, OH | Summer 2017</h4>
-								<p></p>
-								<ul class="list-unstyled">
-									<li></li>
-								</ul>
-							</div>
-						</div>
-
-						<!-- CodeKids -->
-						<div class="row">
-							<div class="col-md-3 col-md-offset-1 pic-col">
-								<img src="assets/codekids.png" class="company-img-circle img-center" alt="CodeKids logo">
-							</div>
-							<div class="col-md-6">
+								<p>As a <strong>Digital Technology Leadership Program Intern</strong>, I leveraged my technical knowledge in software development and database management to lead a project for a tool to be used on shop floors. By communicating technical features of projects to non-technical stakeholders, I was able to gain insight into defining the problem statement that would later inform my decisions in building a product roadmap with best implementation methods.</p>
+							</section>
+							<section>
+								<img src="images/codekids.png" class="center company" alt="CodeKids icon" />
 								<h3>CodeKids Camp</h3>
-								<h4>Junior Instructor | Miami, FL | Summer 2016</h4>
-								<p>At CodeKids, I worked as Junior Instructor to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver actual quantifiable projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
-							</div>
+								<p>At CodeKids, I worked an <strong>Instructor</strong> to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver actual quantifiable projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
+							</section>
 						</div>
+						<span class="image featured"><img src="images/muir.jpg" alt="" /></span>
+					</section>
 
-						<!-- CATALYST -->
-						<div class="row">
-							<div class="col-md-3 col-md-offset-1 pic-col">
-								<img src="assets/catalyst.png" class="company-img-circle img-center" alt="CATALYST logo">
-							</div>
-							<div class="col-md-6">
-								<h3>Cornell Engineering CATALYST Academy</h3>
-								<h4>Program Assistant | Ithaca, NY | Summer 2016</h4>
-								<p>At Cornell's CATALYST Academy, I utilized my position as Program Assistant to create a unique introductory STEM experience for high schoolers. Through on-campus experiences at Cornell's Engineering department, I introduced students to the various opportunties available throughout the numerous fields of engineering. By the end of the program, students were able to complete a full implementation of the engineering design process, from defining the problem to communicating results, through a robotics project with Professor David Schneider. </p>
-							</div>
+					<div class="row">
+						<div class="col-4 col-12-narrower">
+							<section class="box special">
+								<span class="image featured"><img src="images/chef.jpg" alt="Chef's Choice logo" /></span>
+								<h3>Chef's Choice</h3>
+								<p>Recipe recommendation system based on mood.</p>
+								<!-- <ul class="actions special">
+									<li><a href="#" class="button alt">Learn More</a></li>
+								</ul> -->
+							</section>
 						</div>
-
-		  </div>
-		</section>
-
-		<section class="module parallax parallax-4">
-		  <div class="container">
-		    <h1>LEADERSHIP</h1>
-		  </div>
-		</section>
-
-		<section class="module content center">
-		  <div class="container">
-		    <div class="row">
-					<div class="col-sm-4 no-padding">
-						<img src="assets/brh.jpg" class="img-leadership img-responsive" alt="BigRed\\Hacks logo">
-						<div class="leadership">
-							<h3>BigRed//Hacks</h3>
-							Sponsorship Team
+						<div class="col-4 col-12-narrower">
+							<section class="box special">
+								<span class="image featured"><img src="images/hyperloop.png" alt="Cornell Hyperloop logo" /></span>
+								<h3>Cornell Hyperloop</h3>
+								<p>Revolutionizing the future of transportation.</p>
+								<!-- <ul class="actions special">
+									<li><a href="#" class="button alt">Learn More</a></li>
+								</ul> -->
+							</section>
 						</div>
-					</div>
-					<div class="col-sm-4 no-padding">
-						<img src="assets/gates.jpg" class="img-leadership img-responsive" alt="Gates Hall">
-						<div class="leadership">
-							<h3>ACSU</h3>
-							Social Team Officer
+						<div class="col-4 col-12-narrower">
+							<section class="box special">
+								<span class="image featured"><img src="images/ovegas.png" alt="OVegas gameplay" /></span>
+								<h3>OVegas</h3>
+								<p>Texas Holdem Poker, OCaml version.</p>
+								<!-- <ul class="actions special">
+									<li><a href="#" class="button alt">Learn More</a></li>
+								</ul> -->
+							</section>
 						</div>
 					</div>
-					<div class="col-sm-4 no-padding">
-						<img src="assets/duff.jpg" class="img-leadership img-responsive" alt="Picture of students at Duffield Hall">
-						<div class="leadership">
-							<h3>CUEmpower</h3>
-							Mentor
-						</div>
-					</div>
-				</div>
-		  </div>
-		</section>
 
-		<section class="module content">
-		  <div class="container resume">
-		    <a href="/resume" target="_blank">Resume</a>
-		  </div>
-		</section>
+				</section>
+
+			<!-- CTA -->
+				<section id="cta">
+
+					<h2>Sign up for beta access</h2>
+					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
+
+					<form>
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-8 col-12-mobilep">
+								<input type="email" name="email" id="email" placeholder="Email Address" />
+							</div>
+							<div class="col-4 col-12-mobilep">
+								<input type="submit" value="Sign Up" class="fit" />
+							</div>
+						</div>
+					</form>
+
+				</section>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<ul class="copyright">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
