img filename to lowercase

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>hi there!</h2>
+							<h2>Hey there!</h2>
 							<p>I'm Johanna. I'm currently a senior at Cornell University majoring in Computer Science. My interests include Software Engineering, Mobile Development, and EdTech.</p>
 						</header>
 						<ul class="icons">
