--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header" class="alt">
+				<!-- <header id="header" class="alt">
 					<h1>Johanna Smith-Palliser</h1>
 					<nav id="nav">
 						<ul>
@@ -41,7 +41,7 @@
 							<li><a href="#" class="button">Sign Up</a></li>
 						</ul>
 					</nav>
-				</header>
+				</header> -->
 
 			<!-- Banner -->
 				<section id="banner">
@@ -59,9 +59,9 @@
 							<p>I'm Johanna. I'm currently a senior at Cornell University majoring in Computer Science. My interests include Software Engineering, Mobile Development, and EdTech.</p>
 						</header>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://twitter.com/godinasss" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.instagram.com/godinasss/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/godinasss/" class="icon fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://www.linkedin.com/in/johannasp/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="/resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
 						</ul>
@@ -78,7 +78,7 @@
 							<section>
 								<img src="images/cornell.png" class="img-circle center company" alt="Cornell icon" />
 								<h3>Cornell Engineering</h3>
-								<p>In the Department of Computer Science, my role as a <strong>Teaching Assistant</strong> for the introductory and intermediate web development courses (CS 1300, CS 2300) allows me to play help convey technical knowledge to fellow students in a concise and welcoming manner to enable them to continue in the field with confidence and a sense of belonging. Technical concepts for this course include: frontend and backend development, database construction, user interactivity, design principles.</p>
+								<p>In the Department of Computer Science, my role as a <strong>Teaching Assistant</strong> for the introductory and intermediate web development courses (CS 1300, CS 2300) allows me to help convey technical knowledge to fellow students in a concise and welcoming manner to enable them to continue in the field with confidence and a sense of belonging. Technical concepts for this course include: frontend and backend development, database construction, user interactivity, design principles.</p>
 							</section>
 						</div>
 						<div class="features-row">
@@ -109,8 +109,8 @@
 						</div>
 						<div class="col-4 col-12-narrower">
 							<section class="box special">
-								<span class="image featured"><img src="images/hyperloop.png" alt="Cornell Hyperloop logo" /></span>
-								<h3>Cornell Hyperloop</h3>
+								<span class="image featured"><a href="http://hyperloop.mae.cornell.edu"><img src="images/hyperloop.png" alt="Cornell Hyperloop logo" /></a></span>
+								<h3><a href="http://hyperloop.mae.cornell.edu">Cornell Hyperloop</a></h3>
 								<p>Revolutionizing the future of transportation.</p>
 								<!-- <ul class="actions special">
 									<li><a href="#" class="button alt">Learn More</a></li>
@@ -119,8 +119,8 @@
 						</div>
 						<div class="col-4 col-12-narrower">
 							<section class="box special">
-								<span class="image featured"><img src="images/ovegas.png" alt="OVegas gameplay" /></span>
-								<h3>OVegas</h3>
+								<span class="image featured"><a href="https://github.com/JustinShillingford/OVegas"><img src="images/ovegas.png" alt="OVegas gameplay" /></a></span>
+								<h3><a href="https://github.com/JustinShillingford/OVegas">OVegas</a></h3>
 								<p>Texas Holdem Poker, OCaml version.</p>
 								<!-- <ul class="actions special">
 									<li><a href="#" class="button alt">Learn More</a></li>
@@ -153,7 +153,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
