--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<section>
 								<img src="images/twitter.png" class="img-circle center company" alt="Twitter icon" />
 								<h3>Twitter</h3>
-								<p>As a <strong>Software Engineering Intern</strong> at Twitter, I worked on the MoPub SDK team recreating the fullscreen video ad experience on iOS devices to empower developers and create a seamless user experience.  </p>
+								<p>As a <strong>Software Engineering Intern</strong> at Twitter, I worked on the MoPub SDK team recreating the fullscreen video ad experience on iOS devices to empower developers and create a seamless user experience. I wrote a technical design document to plan my implementation and continued updating it throughout the development process to ensure the project's success when pushed to production after the conclusion of my internship. </p>
 							</section>
 							<section>
 								<img src="images/cornell.png" class="img-circle center company" alt="Cornell icon" />
@@ -128,25 +128,6 @@
 							</section>
 						</div>
 					</div>
-
-				</section>
-
-			<!-- CTA -->
-				<section id="cta">
-
-					<h2>Sign up for beta access</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-					<form>
-						<div class="row gtr-50 gtr-uniform">
-							<div class="col-8 col-12-mobilep">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
-							</div>
-							<div class="col-4 col-12-mobilep">
-								<input type="submit" value="Sign Up" class="fit" />
-							</div>
-						</div>
-					</form>
 
 				</section>
 
