--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 					<section class="box special">
 						<header class="major">
 							<h2>Hey there!</h2>
-							<p>I'm Johanna. I'm currently a senior at Cornell University majoring in Computer Science. My interests include Software Engineering, Mobile Development, and EdTech.</p>
+							<p>I'm Johanna, a Latina software engineer interested in tackling hard problems and making the tech industry look more like the diverse world we live in. I'm currently a senior at Cornell University majoring in Computer Science. My interests in technology include Software Engineering, Mobile Development, and User Experience. In my (admittedly very little) free time, I like to run, cook, and do makeup.</p>
 						</header>
 						<ul class="icons">
 							<li><a href="https://twitter.com/godinasss" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/godinasss/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://www.instagram.com/godinasss/" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/johannasp" class="icon fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://www.linkedin.com/in/johannasp/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="/resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
 						</ul>
