Added Adobe internship as TBD, updated resume

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<section class="box special">
 						<header class="major">
 							<h2>Hey there!</h2>
-							<p>I'm Johanna, a Latina software engineer interested in tackling hard problems and making the tech industry look more like the diverse world we live in. I'm currently a senior at Cornell University majoring in Computer Science. My interests in technology include Software Engineering, Mobile Development, and User Experience. In my (admittedly very little) free time, I like to run, cook, and do makeup.</p>
+							<p>I'm Johanna, a Latina software engineer interested in tackling hard problems and making the tech industry look more like the diverse world we live in. This Fall, I will be continuing my studies at Cornell University in pursuing a Master of Engineering degree in Computer Science. My interests in technology include Software Engineering, Full-Stack Development, and Mobile Development (iOS). In my (admittedly very little) free time, I like to run, cook, and find new donut shops to try.</p>
 						</header>
 						<ul class="icons">
 							<li><a href="https://twitter.com/godinasss" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -71,25 +71,37 @@
 					<section class="box special features">
 						<div class="features-row">
 							<section>
-								<img src="images/twitter.png" class="img-circle center company" alt="Twitter icon" />
-								<h3>Twitter</h3>
-								<p>As a <strong>Software Engineering Intern</strong> at Twitter, I worked on the MoPub SDK team recreating the fullscreen video ad experience on iOS devices to empower developers and create a seamless user experience. I wrote a technical design document to plan my implementation and continued updating it throughout the development process to ensure the project's success when pushed to production after the conclusion of my internship. </p>
+								<img src="images/adobe.png" class="img-circle center company" alt="Twitter icon" />
+								<h3>Adobe</h3>
+								<h4>Summer 2019</h4>
+								<p>Coming soon... </p>
 							</section>
 							<section>
-								<img src="images/cornell.png" class="img-circle center company" alt="Cornell icon" />
-								<h3>Cornell Engineering</h3>
-								<p>In the Department of Computer Science, my role as a <strong>Teaching Assistant</strong> for the introductory and intermediate web development courses (CS 1300, CS 2300) allows me to help convey technical knowledge to fellow students in a concise and welcoming manner to enable them to continue in the field with confidence and a sense of belonging. Technical concepts for this course include: frontend and backend development, database construction, user interactivity, design principles.</p>
+								<img src="images/twitter.png" class="img-circle center company" alt="Cornell icon" />
+								<h3>Twitter</h3>
+								<h4>Summer 2018</h4>
+								<p>As a <strong>Software Engineering Intern</strong> at Twitter, I worked on the MoPub SDK team recreating the fullscreen video ad experience on iOS devices to empower developers and create a seamless user experience. I wrote a technical design document to plan my implementation and continued updating it throughout the development process to ensure the project's success when pushed to production after the conclusion of my internship. </p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
-								<img src="images/ge.png" class="img-circle center company" alt="GE icon" />
-								<h3>GE Aviation</h3>
-								<p>As a <strong>Digital Technology Leadership Program Intern</strong>, I leveraged my technical knowledge in software development and database management to lead a project for a tool to be used on shop floors. By communicating technical features of projects to non-technical stakeholders, I was able to gain insight into defining the problem statement that would later inform my decisions in building a product roadmap with best implementation methods.</p>
+								<img src="images/cornell.png" class="img-circle center company" alt="Twitter icon" />
+								<h3>Cornell Engineering</h3>
+								<h4>Fall/Spring 2018, Spring 2019</h4>
+								<p>In the Department of Computer Science, my role as a <strong>Teaching Assistant</strong> for the introductory and intermediate web development courses (CS 1300, CS 2300) allows me to help convey technical knowledge to fellow students in a concise and welcoming manner to enable them to continue in the field with confidence and a sense of belonging. Technical concepts for this course include: frontend and backend development, database construction, user interactivity, design principles.</p>
 							</section>
 							<section>
-								<img src="images/codekids.png" class="center company" alt="CodeKids icon" />
+								<img src="images/ge.png" class="img-circle center company" alt="Cornell icon" />
+								<h3>GE Aviation</h3>
+								<h4>Summer 2017</h4>
+								<p>As a <strong>Digital Technology Leadership Program Intern</strong>, I leveraged my technical knowledge in software development and database management to lead a project for a tool to be used on shop floors. By communicating technical features of projects to non-technical stakeholders, I was able to gain insight into defining the problem statement that would later inform my decisions in building a product roadmap with best implementation methods.</p>
+							</section>
+						</div>
+						<div class="features-row">
+							<section style="width: 100%; padding:3em;">
+								<img src="images/codekids.png" class="center company" alt="GE icon" />
 								<h3>CodeKids Camp</h3>
+								<h4>Summer 2016</h4>
 								<p>At CodeKids, I worked an <strong>Instructor</strong> to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver actual quantifiable projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
 							</section>
 						</div>
