Updated resume to include Career Queue under Projects

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 						<span class="image featured"><img src="images/muir.jpg" alt="" /></span>
 					</section>
 
+					<!-- Projects to consider: 
+						 Career Queue, AI Prac project, some future data viz project -->
+
 					<div class="row">
 						<div class="col-4 col-12-narrower">
 							<section class="box special">
