updating meta tags for searchability purposes

--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
   			gtag('config', 'UA-105586258-1');
 		</script>
 
-		<title>hi there!</title>
+		<title>Johanna Smith-Palliser</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/style.css" />
   
+		<meta name="author" content="Johanna Smith-Palliser">
+		<meta name="description" content="Software Engineer | CS @ Cornell">
+		
+		<meta itemprop="name" content="Johanna Smith-Palliser">
 	</head>
 	<body class="landing is-preload">
 		<div id="page-wrapper">
