Update meta, resume

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<link rel="stylesheet" href="assets/css/style.css" />
   
 		<meta name="author" content="Johanna Smith-Palliser">
-		<meta name="description" content="Software Engineer | CS @ Cornell">
+		<meta name="description" content="Johanna Smith-Palliser - Software Engineer | CS @ Cornell">
 		
 		<meta itemprop="name" content="Johanna Smith-Palliser">
 	</head>
