Added youtube viral data project to page

--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
 								</ul> -->
 							</section>
 						</div>
+						<div class="col-4 col-12-narrower">
+							<section class="box special">
+								<span class="image featured"><a href="/data+viz.html"><img src="images/viz.png" alt="Data visualization stock image" /></a></span>
+								<h3><a href="/data+viz.html">Data Viz</a></h3>
+								<p>Data visualizations using d3.js that make data concise and meaningful.</p>
+							</section>
+						</div>
 					</div>
 
 				</section>
