Added Adobe experience, hopefully fixed link to data viz project

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<section class="box special">
 						<header class="major">
 							<h2>Hey there!</h2>
-							<p>I'm Johanna, a Latina software engineer interested in tackling hard problems and making the tech industry look more like the diverse world we live in. This Fall, I will be continuing my studies at Cornell University in pursuing a Master of Engineering degree in Computer Science. My interests in technology include Software Engineering, Full-Stack Development, and Mobile Development (iOS). In my (admittedly very little) free time, I like to run, cook, and find new donut shops to try.</p>
+							<p>I'm Johanna, a Latina software engineer interested in tackling hard problems and making the tech industry look more like the diverse world we live in. This Fall, I will be continuing my studies at Cornell University pursuing a Master of Engineering degree in Computer Science. My interests in technology include Software Engineering, Full-Stack Development, and Mobile Development (iOS). In my free time, I like to run, cook, and find new donut shops to try.</p>
 						</header>
 						<ul class="icons">
 							<li><a href="https://twitter.com/godinasss" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -89,13 +89,13 @@
 								<img src="images/adobe.png" class="img-circle center company" alt="Twitter icon" />
 								<h3>Adobe</h3>
 								<h4>Summer 2019</h4>
-								<p>Coming soon... </p>
+								<p>Working on the Lightroom Cloud Services team as a <strong>Software Engineer Intern</strong>, I owned development of critical microservices responsible for image processing on all platforms. More specifically, I developed a comprehensive test suite of unit, component, and end-to-end tests in order to streamline the deployment pipeline by up to 20 second per test case for thousands of tests.</p>
 							</section>
 							<section>
 								<img src="images/twitter.png" class="img-circle center company" alt="Cornell icon" />
 								<h3>Twitter</h3>
 								<h4>Summer 2018</h4>
-								<p>As a <strong>Software Engineering Intern</strong> at Twitter, I worked on the MoPub SDK team recreating the fullscreen video ad experience on iOS devices to empower developers and create a seamless user experience. I wrote a technical design document to plan my implementation and continued updating it throughout the development process to ensure the project's success when pushed to production after the conclusion of my internship. </p>
+								<p>As a <strong>Software Engineering Intern</strong> at Twitter, I worked on the MoPub SDK team recreating the fullscreen video ad experience on iOS devices to empower developers and create a seamless user experience. I wrote a technical design document to plan my implementation and continued updating it throughout the development process to ensure the project's success when pushed to production after the conclusion of my internship. My work is currently in production, improving load time by up to 5 seconds per ad unit.</p>
 							</section>
 						</div>
 						<div class="features-row">
@@ -159,8 +159,8 @@
 						</div>
 						<div class="col-4 col-12-narrower">
 							<section class="box special">
-								<span class="image featured"><a href="/data+viz.html"><img src="images/viz.png" alt="Data visualization stock image" /></a></span>
-								<h3><a href="/data+viz.html">Data Viz</a></h3>
+								<span class="image featured"><a href="projects/data+viz.html"><img src="images/viz.png" alt="Data visualization stock image" /></a></span>
+								<h3><a href="projects/data+viz.html">Data Viz</a></h3>
 								<p>Data visualizations using d3.js that make data concise and meaningful.</p>
 							</section>
 						</div>
