Updating Adobe description once again lol

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<img src="images/adobe.png" class="img-circle center company" alt="Twitter icon" />
 								<h3>Adobe</h3>
 								<h4>Summer 2019</h4>
-								<p>Working on the Lightroom Cloud Services team as a <strong>Software Engineer Intern</strong>, I owned development of critical microservices responsible for image processing on all platforms. More specifically, I developed a comprehensive test suite of unit, component, and end-to-end tests in order to streamline the deployment pipeline by up to 20 second per test case for thousands of tests.</p>
+								<p>Working on the Lightroom Cloud Services team as a <strong>Software Engineer Intern</strong>, I led efforts to transform critical image processing microservices testing into a more streamlined deployment pipeline. More specifically, I developed a comprehensive test suite of unit, component, and end-to-end tests in Ruby to effectively test these microservices and provide modularization of code. In doing this, I was able to reduce test runtime by up to 20 seconds per test for thousands of tests cases. </p>
 							</section>
 							<section>
 								<img src="images/twitter.png" class="img-circle center company" alt="Cornell icon" />
